@@ -1,0 +1,1 @@
+ad | -C cc | Waldo.txt | | 2
