@@ -1,0 +1,1 @@
+ad | -C ll | Waldo.txt | | 2
