@@ -1,0 +1,1 @@
+ad | -C ss | Waldo.txt | | 2
