@@ -1,0 +1,1 @@
+ad | -C tt | Waldo.txt | | 2
