@@ -1,0 +1,1 @@
+ad | -C uu | Waldo.txt | | 2
